Internationalize email notifications
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -1,4 +1,29 @@
+EmailUtility.14=to the OpenChain Certification website.
+EmailUtility.16=To complete your registration, click on the following or copy/paste into your web browser
+EmailUtility.20=Thanks,
+EmailUtility.22=The OpenChain team
+EmailUtility.24=OpenChain Registration [do not reply]
+EmailUtility.27=Exception occured during the emailing of the invitation
+EmailUtility.4=The region name for the email facility has not been set.  Pleaese contact the OpenChain team with this error.
+EmailUtility.48=Congratulations
+EmailUtility.50=.  Your certification request has been accepted.  If you did not submit a request for OpenChain certification, please notify the OpenChain group at openchain-conformance@lists.linuxfoundation.org.
+EmailUtility.52=OpenChain certification request has been accepted [do not reply]
+EmailUtility.56=The from email for the email facility has not been set.  Pleaese contact the OpenChain team with this error.
+EmailUtility.58=The to email for the email facility has not been set.  Pleaese contact the OpenChain team with this error.
+EmailUtility.62=Exception occured during the emailing of a user email
+EmailUtility.7=The from email for the email facility has not been set.  Pleaese contact the OpenChain team with this error.
+EmailUtility.75=The from email for the email facility has not been set.  Pleaese contact the OpenChain team with this error.
+EmailUtility.77=The profile for username
+EmailUtility.80=has been updated.  If you this update has been made in error, please contact the OpenChain certification team.
+EmailUtility.81=OpenChain Certification profile updated [do not reply]
+EmailUtility.84=Exception occured during the emailing of the submission notification
+EmailUtility.87=The from email for the email facility has not been set.  Pleaese contact the OpenChain team with this error.
+EmailUtility.91=To reset the your password, click on the following or copy/paste into your web browser
+EmailUtility.95=The OpenChain team
+EmailUtility.96=OpenChain Password Reset [do not reply]
+EmailUtility.99=Exception occured during the emailing of the password reset
 # Yes No answer strings
+EmailUtility.11=Welcome
 YesNo.Yes=yes
 YesNo.No=no
 YesNo.Any=any
