Internationalize UserSession and remove some duplicate messages in Question
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -23,11 +23,8 @@ EmailUtility.95=The OpenChain team
 EmailUtility.96=OpenChain Password Reset [do not reply]
 EmailUtility.99=Exception occurred during the emailing of the password reset
 EmailUtility.11=Welcome
-Question.10=Invalid format for question number 
-Question.11=.  Must be of the format N or N.N or N.N.N
 Question.2=Spec version for question was not specified
 Question.3=Question number for question was not specified
-Question.5=Invalid format for question number 
 Question.6=.  Must be of the format N or N.N or N.N.N
 Question.7=Invalid format for question number 
 Question.8=.  Must be of the format N or N.a or N.a.i
@@ -42,3 +39,70 @@ YesNo.YesNotApplicable=yes, but not applicable
 YesNo.NoNotApplicable=no, but not applicable
 # Test values - used for testing the I18N functionality NOTE: THESE SHOULD NOT BE TRANSLATED
 test.key1=default key1
+UserSession.0=User
+UserSession.10=Unexpected Invalid Key exception completing verification.  Please report this error to the OpenChain group
+UserSession.100=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+UserSession.101=Username for password reset does not match the username in the email reset.
+UserSession.103=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.105=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
+UserSession.106=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+UserSession.107=Unexpected Invalid User error.  Please report this error to the OpenChain team
+UserSession.11=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.13=User
+UserSession.16=does not exist.  Please review the username or sign up as a new user.
+UserSession.17=Passwords do not match.  Please retry or reset your password
+UserSession.18=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
+UserSession.19=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+UserSession.20=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.22=User
+UserSession.26=This use has not been verified.  Please check your email and click on the provided link to verify this user and email address
+UserSession.27=A password reset is in process.  Login is not allowed until the password has been reset.
+UserSession.28=Passwords do not match.  Please retry or reset your password
+UserSession.29=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
+UserSession.3=not found.  Could not complete registration.
+UserSession.30=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+UserSession.31=User
+UserSession.34=already exist.  Please select a different unique username.
+UserSession.35=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.37=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
+UserSession.38=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+UserSession.39=Unable to email the invitiation:
+UserSession.4=The verification has expired.  Please resend the verification email.  When logging in using your username and password, you will be prompted to resend the verification.
+UserSession.41=Error adding user:
+UserSession.45=Could not find a full spec version for major version
+UserSession.47=No survey response was found matching version 
+UserSession.49=Unable to get connection for creating answers.  Please report this error to the OpenChain team
+UserSession.50=Unexpectes SQL error adding answers.  Please report this error to the OpenChain team
+UserSession.52=User is not logged in
+UserSession.54=No value specified for a yes/no question
+UserSession.56=Invalid yes/no value:
+UserSession.58=Invalid answer type for question
+UserSession.60=Can not submit - the following question(s) either has missing answers or invalid answers:
+UserSession.63=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.65=User
+UserSession.67=does not exist.  Please review the username or sign up as a new user.
+UserSession.68=Passwords do not match.  Please retry or reset your password
+UserSession.69=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
+UserSession.7=Verification failed.  Invalid registration ID.  Please retry.
+UserSession.70=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+UserSession.71=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
+UserSession.72=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+UserSession.73=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.75=Unexpected invalid user error.  Please report this error to the OpenChain team:
+UserSession.77=Unable to re-email the invitiation:
+UserSession.79=Unable to get connection for resetting answers.  Please report this error to the OpenChain team
+UserSession.8=Unexpected SQL exception completing verification.  Please report this error to the OpenChain group
+UserSession.80=Unexpectes SQL error resetting answers.  Please report this error to the OpenChain team
+UserSession.81=Can not update a user which is not logged in.
+UserSession.82=User
+UserSession.85=no longer exist.  Please report this error to the open chain team.
+UserSession.86=Unable to email the for the profile update:
+UserSession.88=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.9=Unexpected No Such Algorithm exception completing verification.  Please report this error to the OpenChain group
+UserSession.90=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
+UserSession.91=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+UserSession.92=Attempting to reset a password when a reset password email was not sent.
+UserSession.95=Email password reset tokens does not match.  Please re-send the password reset.
+UserSession.96=The verification has expired.  Please resend the verification email.  When logging in using your username and password, you will be prompted to resend the verification.
+UserSession.97=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.99=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
