Add support for templates in the I18N messages class
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -39,6 +39,7 @@ YesNo.YesNotApplicable=yes, but not applicable
 YesNo.NoNotApplicable=no, but not applicable
 # Test values - used for testing the I18N functionality NOTE: THESE SHOULD NOT BE TRANSLATED
 test.key1=default key1
+test.key2=This is a template test1 with 7
 UserSession.0=User
 UserSession.10=Unexpected Invalid Key exception completing verification.  Please report this error to the OpenChain group
 UserSession.100=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
