--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -1,34 +1,61 @@
-EmailUtility.14=to the OpenChain Certification website.
-EmailUtility.16=To complete your registration, click on the following or copy/paste into your web browser
-EmailUtility.20=Thanks,
-EmailUtility.22=The OpenChain team
+CertificationServlet.11=Unexpected SQL exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.13=Unexpected data exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.14=An unexpected error occurred.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.17=Invalid request - missing request parameter
+CertificationServlet.18=User has not been verified.
+CertificationServlet.19=Login failed: {0}
+CertificationServlet.20=Password can only be set by using the password reset menu
+CertificationServlet.21=Can not send a re-registration email for a user that is already logged in.  Log-out first then select re-send invitation
+CertificationServlet.22=Error signing up: {0}
+CertificationServlet.24=Can not reset password.  Check that the username and email match the registered user
+CertificationServlet.25=User is not logged in
+CertificationServlet.26=Invalid survey question update: {0}
+CertificationServlet.29=Must have admin privileges to upload a survey
+CertificationServlet.30=Invalid survey upload: {0}
+CertificationServlet.31=Must have admin privileges to update a survey
+CertificationServlet.32=Must have admin privileges to set submission status
+CertificationServlet.33=Must have admin privileges to set submission status
+CertificationServlet.34=Must have admin privileges to set submission status
+CertificationServlet.35=Must have admin privileges to set submission status
+CertificationServlet.36=Unknown post request: {0}.  Please notify the OpenChain technical group.
+CertificationServlet.39=Unexpected SQL exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.41=Unexpected Question Type exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.43=Unexpected survey response exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.45=Your submission was saved, however, there was a problem sending the notification to the OpenChain team.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.46=An unexpected error occurred.  Please notify the OpenChain technical group that the following error has occurred: {0}
+CertificationServlet.47=Survey version {0} language {1} already exists.  Can not add.  Use update to update the questions.
+CertificationServlet.50=No name specified for a section
+CertificationServlet.51=No title specified for a section
+CertificationServlet.52=Duplicate questions in survey upload: {0}
+CertificationServlet.55=Invalid parent question number for question number {0}
+CertificationServlet.56=The section {0} does not exist for question 
+CertificationServlet.58=Survey version {0} does not exist.  Can only update questions for an existing survey.
+CertificationServlet.60=Duplicate questions in question update: {0}
+CertificationServlet.63=Not all questions are present in the update.  Questions can not be removed during update.  A new specvesion should be created if questions are to be removed.
+CertificationServlet.64=Invalid CSV format.  Number of columns do not match.  Expected {0} columns.
+CertificationServlet.66=Invalid CSV column.  Expected {0}, found {1}
+CertificationServlet.7=Unknown server request: {0}
+CertificationServlet.9=Unexpected survey response exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
 EmailUtility.24=OpenChain Registration [do not reply]
 EmailUtility.27=Exception occurred during the emailing of the invitation
 EmailUtility.4=The region name for the email facility has not been set.  Please contact the OpenChain team with this error.
-EmailUtility.48=Congratulations
-EmailUtility.50=.  Your certification request has been accepted.  If you did not submit a request for OpenChain certification, please notify the OpenChain group at openchain-conformance@lists.linuxfoundation.org.
+EmailUtility.48=<div>Congratulations {0} .  Your certification request has been accepted.  If you did not submit a request for OpenChain certification, please notify the OpenChain group at openchain-conformance@lists.linuxfoundation.org.</div>
 EmailUtility.52=OpenChain certification request has been accepted [do not reply]
-EmailUtility.56=The from email for the email facility has not been set.  Please contact the OpenChain team with this error.
 EmailUtility.58=The to email for the email facility has not been set.  Please contact the OpenChain team with this error.
 EmailUtility.62=Exception occurred during the emailing of a user email
 EmailUtility.7=The from email for the email facility has not been set.  Please contact the OpenChain team with this error.
-EmailUtility.75=The from email for the email facility has not been set.  Please contact the OpenChain team with this error.
-EmailUtility.77=The profile for username
-EmailUtility.80=has been updated.  If you this update has been made in error, please contact the OpenChain certification team.
+EmailUtility.77=<div>The profile for username {0} has been updated.  If you this update has been made in error, please contact the OpenChain certification team.</div>
 EmailUtility.81=OpenChain Certification profile updated [do not reply]
 EmailUtility.84=Exception occurred during the emailing of the submission notification
-EmailUtility.87=The from email for the email facility has not been set.  Please contact the OpenChain team with this error.
-EmailUtility.91=To reset the your password, click on the following or copy/paste into your web browser
-EmailUtility.95=The OpenChain team
+EmailUtility.91=<div>To reset the your password, click on the following or copy/paste into your web browser<a href="{0}">" {0} </a><br/><br/><br/>The OpenChain team</div>
 EmailUtility.96=OpenChain Password Reset [do not reply]
 EmailUtility.99=Exception occurred during the emailing of the password reset
-EmailUtility.11=Welcome
+EmailUtility.11=<div>Welcome {0} to the OpenChain Certification website.<br /> <br />To complete your registration, click on the following or copy/paste into your web browser <a href="{1}">{1}</a><br/><br/>Thanks,<br/>The OpenChain team</div>
 Question.2=Spec version for question was not specified
 Question.3=Question number for question was not specified
-Question.6=.  Must be of the format N or N.N or N.N.N
-Question.7=Invalid format for question number 
-Question.8=.  Must be of the format N or N.a or N.a.i
-Question.9=Question number for question was not specified
+Question.6=Invalid format for question number {0}.  Must be of the format N or N.N or N.N.N 
+Question.8=Invalid format for question number {0}.  Must be of the format N or N.a or N.a.i
+QuestionJsonDeserializer.10=Unknown question type: {0}
 # Yes No answer strings
 YesNo.Yes=yes
 YesNo.No=no
@@ -39,71 +66,40 @@ YesNo.YesNotApplicable=yes, but not applicable
 YesNo.NoNotApplicable=no, but not applicable
 # Test values - used for testing the I18N functionality NOTE: THESE SHOULD NOT BE TRANSLATED
 test.key1=default key1
-test.key2=This is a template test1 with 7
-UserSession.0=User
-UserSession.10=Unexpected Invalid Key exception completing verification.  Please report this error to the OpenChain group
-UserSession.100=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
+test.key2=This is a template test1 with "7"
+UserSession.10=Unexpected Invalid Key exception completing verification.  Please report this error to the OpenChain team
 UserSession.101=Username for password reset does not match the username in the email reset.
-UserSession.103=Unexpected SQL error.  Please report this error to the OpenChain team:
-UserSession.105=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
-UserSession.106=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
 UserSession.107=Unexpected Invalid User error.  Please report this error to the OpenChain team
-UserSession.11=Unexpected SQL error.  Please report this error to the OpenChain team:
-UserSession.13=User
-UserSession.16=does not exist.  Please review the username or sign up as a new user.
+UserSession.11=Unexpected SQL error.  Please report this error to the OpenChain team: {0}
+UserSession.16=User {0} does not exist.  Please review the username or sign up as a new user.
 UserSession.17=Passwords do not match.  Please retry or reset your password
 UserSession.18=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
 UserSession.19=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
-UserSession.20=Unexpected SQL error.  Please report this error to the OpenChain team:
-UserSession.22=User
 UserSession.26=This use has not been verified.  Please check your email and click on the provided link to verify this user and email address
 UserSession.27=A password reset is in process.  Login is not allowed until the password has been reset.
-UserSession.28=Passwords do not match.  Please retry or reset your password
-UserSession.29=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
-UserSession.3=not found.  Could not complete registration.
-UserSession.30=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
-UserSession.31=User
-UserSession.34=already exist.  Please select a different unique username.
-UserSession.35=Unexpected SQL error.  Please report this error to the OpenChain team:
-UserSession.37=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
-UserSession.38=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
-UserSession.39=Unable to email the invitiation:
+UserSession.3=User {0} not found.  Could not complete registration.
+UserSession.34=User {0} already exist.  Please select a different unique username.
+UserSession.39=Unable to email the invitation: {0}
 UserSession.4=The verification has expired.  Please resend the verification email.  When logging in using your username and password, you will be prompted to resend the verification.
-UserSession.41=Error adding user:
-UserSession.45=Could not find a full spec version for major version
-UserSession.47=No survey response was found matching version 
+UserSession.41=Error adding user: {0}
+UserSession.45=Could not find a full spec version for major version {0}
+UserSession.47=No survey response was found matching version {0}
 UserSession.49=Unable to get connection for creating answers.  Please report this error to the OpenChain team
-UserSession.50=Unexpectes SQL error adding answers.  Please report this error to the OpenChain team
+UserSession.50=Unexpected SQL error adding answers.  Please report this error to the OpenChain team
 UserSession.52=User is not logged in
 UserSession.54=No value specified for a yes/no question
-UserSession.56=Invalid yes/no value:
-UserSession.58=Invalid answer type for question
+UserSession.56=Invalid yes/no value: {0}
+UserSession.58=Invalid answer type for question {0}
 UserSession.60=Can not submit - the following question(s) either has missing answers or invalid answers:
-UserSession.63=Unexpected SQL error.  Please report this error to the OpenChain team:
-UserSession.65=User
-UserSession.67=does not exist.  Please review the username or sign up as a new user.
-UserSession.68=Passwords do not match.  Please retry or reset your password
-UserSession.69=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
 UserSession.7=Verification failed.  Invalid registration ID.  Please retry.
-UserSession.70=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
-UserSession.71=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
-UserSession.72=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
-UserSession.73=Unexpected SQL error.  Please report this error to the OpenChain team:
-UserSession.75=Unexpected invalid user error.  Please report this error to the OpenChain team:
-UserSession.77=Unable to re-email the invitiation:
+UserSession.75=Unexpected invalid user error.  Please report this error to the OpenChain team: {0}
+UserSession.77=Unable to re-email the invitation: {0}
 UserSession.79=Unable to get connection for resetting answers.  Please report this error to the OpenChain team
 UserSession.8=Unexpected SQL exception completing verification.  Please report this error to the OpenChain group
-UserSession.80=Unexpectes SQL error resetting answers.  Please report this error to the OpenChain team
+UserSession.80=Unexpected SQL error resetting answers.  Please report this error to the OpenChain team
 UserSession.81=Can not update a user which is not logged in.
-UserSession.82=User
-UserSession.85=no longer exist.  Please report this error to the open chain team.
-UserSession.86=Unable to email the for the profile update:
-UserSession.88=Unexpected SQL error.  Please report this error to the OpenChain team:
+UserSession.85=User {0} no longer exist.  Please report this error to the open chain team.
+UserSession.86=Unable to email the for the profile update: {0}
 UserSession.9=Unexpected No Such Algorithm exception completing verification.  Please report this error to the OpenChain group
-UserSession.90=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
-UserSession.91=Unexpected Invalid Key Spec error.  Please report this error to the OpenChain team
 UserSession.92=Attempting to reset a password when a reset password email was not sent.
 UserSession.95=Email password reset tokens does not match.  Please re-send the password reset.
-UserSession.96=The verification has expired.  Please resend the verification email.  When logging in using your username and password, you will be prompted to resend the verification.
-UserSession.97=Unexpected SQL error.  Please report this error to the OpenChain team:
-UserSession.99=Unexpected No Such Algorithm error.  Please report this error to the OpenChain team
