--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -1,3 +1,29 @@
+# Strings used in emails sent on behalf of the certification application
+# Note that some of the strings include HTML formatting which should not be localized
+EmailUtility.24=OpenChain Registration [do not reply]
+EmailUtility.27=Exception occurred during the emailing of the invitation
+EmailUtility.4=The region name for the email facility has not been set.  Please contact the OpenChain team with this error.
+EmailUtility.48=<div>Congratulations {0}.  Your certification request has been accepted.  If you did not submit a request for OpenChain certification, please notify the OpenChain group at openchain-conformance@lists.linuxfoundation.org.</div>
+EmailUtility.52=OpenChain certification request has been accepted [do not reply]
+EmailUtility.58=The to email for the email facility has not been set.  Please contact the OpenChain team with this error.
+EmailUtility.62=Exception occurred during the emailing of a user email
+EmailUtility.7=The from email for the email facility has not been set.  Please contact the OpenChain team with this error.
+EmailUtility.77=<div>The profile for username {0} has been updated.  If you this update has been made in error, please contact the OpenChain certification team.</div>
+EmailUtility.81=OpenChain Certification profile updated [do not reply]
+EmailUtility.84=Exception occurred during the emailing of the submission notification
+EmailUtility.91=<div>To reset the your password, click on the following or copy/paste into your web browser<a href="{0}">" {0} </a><br/><br/><br/>The OpenChain team</div>
+EmailUtility.96=OpenChain Password Reset [do not reply]
+EmailUtility.99=Exception occurred during the emailing of the password reset
+EmailUtility.11=<div>Welcome {0} to the OpenChain Certification website.<br /> <br />To complete your registration, click on the following or copy/paste into your web browser <a href="{1}">{1}</a><br/><br/>Thanks,<br/>The OpenChain team</div>
+# Yes No answer strings - rendered in some columns in the UI tables
+YesNo.Yes=yes
+YesNo.No=no
+YesNo.Any=any
+YesNo.NotApplicable=not applicable
+YesNo.NotAnswered=not answered
+YesNo.YesNotApplicable=yes, but not applicable
+YesNo.NoNotApplicable=no, but not applicable
+# Strings used in the Certification Servlet class.  Most of the messages are errors.  Errors from this class are more common
 CertificationServlet.11=Unexpected SQL exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
 CertificationServlet.13=Unexpected data exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
 CertificationServlet.14=An unexpected error occurred.  Please notify the OpenChain technical group that the following error has occurred: {0}
@@ -36,37 +62,7 @@ CertificationServlet.64=Invalid CSV format.  Number of columns do not match.  Ex
 CertificationServlet.66=Invalid CSV column.  Expected {0}, found {1}
 CertificationServlet.7=Unknown server request: {0}
 CertificationServlet.9=Unexpected survey response exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
-EmailUtility.24=OpenChain Registration [do not reply]
-EmailUtility.27=Exception occurred during the emailing of the invitation
-EmailUtility.4=The region name for the email facility has not been set.  Please contact the OpenChain team with this error.
-EmailUtility.48=<div>Congratulations {0} .  Your certification request has been accepted.  If you did not submit a request for OpenChain certification, please notify the OpenChain group at openchain-conformance@lists.linuxfoundation.org.</div>
-EmailUtility.52=OpenChain certification request has been accepted [do not reply]
-EmailUtility.58=The to email for the email facility has not been set.  Please contact the OpenChain team with this error.
-EmailUtility.62=Exception occurred during the emailing of a user email
-EmailUtility.7=The from email for the email facility has not been set.  Please contact the OpenChain team with this error.
-EmailUtility.77=<div>The profile for username {0} has been updated.  If you this update has been made in error, please contact the OpenChain certification team.</div>
-EmailUtility.81=OpenChain Certification profile updated [do not reply]
-EmailUtility.84=Exception occurred during the emailing of the submission notification
-EmailUtility.91=<div>To reset the your password, click on the following or copy/paste into your web browser<a href="{0}">" {0} </a><br/><br/><br/>The OpenChain team</div>
-EmailUtility.96=OpenChain Password Reset [do not reply]
-EmailUtility.99=Exception occurred during the emailing of the password reset
-EmailUtility.11=<div>Welcome {0} to the OpenChain Certification website.<br /> <br />To complete your registration, click on the following or copy/paste into your web browser <a href="{1}">{1}</a><br/><br/>Thanks,<br/>The OpenChain team</div>
-Question.2=Spec version for question was not specified
-Question.3=Question number for question was not specified
-Question.6=Invalid format for question number {0}.  Must be of the format N or N.N or N.N.N 
-Question.8=Invalid format for question number {0}.  Must be of the format N or N.a or N.a.i
-QuestionJsonDeserializer.10=Unknown question type: {0}
-# Yes No answer strings
-YesNo.Yes=yes
-YesNo.No=no
-YesNo.Any=any
-YesNo.NotApplicable=not applicable
-YesNo.NotAnswered=not answered
-YesNo.YesNotApplicable=yes, but not applicable
-YesNo.NoNotApplicable=no, but not applicable
-# Test values - used for testing the I18N functionality NOTE: THESE SHOULD NOT BE TRANSLATED
-test.key1=default key1
-test.key2=This is a template test1 with "7"
+# Strings from the UserSession class.  Many strings are error messages.  Some of the error messages are commonly displayed
 UserSession.10=Unexpected Invalid Key exception completing verification.  Please report this error to the OpenChain team
 UserSession.101=Username for password reset does not match the username in the email reset.
 UserSession.107=Unexpected Invalid User error.  Please report this error to the OpenChain team
@@ -103,3 +99,12 @@ UserSession.86=Unable to email the for the profile update: {0}
 UserSession.9=Unexpected No Such Algorithm exception completing verification.  Please report this error to the OpenChain group
 UserSession.92=Attempting to reset a password when a reset password email was not sent.
 UserSession.95=Email password reset tokens does not match.  Please re-send the password reset.
+# Strings from the Question class.  Less common error messages
+Question.2=Spec version for question was not specified
+Question.3=Question number for question was not specified
+Question.6=Invalid format for question number {0}.  Must be of the format N or N.N or N.N.N 
+Question.8=Invalid format for question number {0}.  Must be of the format N or N.a or N.a.i
+QuestionJsonDeserializer.10=Unknown question type: {0}
+# Test values - used for testing the I18N functionality NOTE: THESE SHOULD NOT BE TRANSLATED
+test.key1=default key1
+test.key2=This is a template test1 with "7"
