Intermediate checkin for JSON file format upload.  Also fixed superflous double quote in EmailUtiliy.91
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -11,7 +11,7 @@ EmailUtility.7=The from email for the email facility has not been set.  Please c
 EmailUtility.77=<div>The profile for username {0} has been updated.  If you this update has been made in error, please contact the OpenChain certification team.</div>
 EmailUtility.81=OpenChain Certification profile updated [do not reply]
 EmailUtility.84=Exception occurred during the emailing of the submission notification
-EmailUtility.91=<div>To reset the your password, click on the following or copy/paste into your web browser<a href="{0}">" {0} </a><br/><br/><br/>The OpenChain team</div>
+EmailUtility.91=<div>To reset the your password, click on the following or copy/paste into your web browser<a href="{0}"> {0} </a><br/><br/><br/>The OpenChain team</div>
 EmailUtility.96=OpenChain Password Reset [do not reply]
 EmailUtility.99=Exception occurred during the emailing of the password reset
 EmailUtility.11=<div>Welcome {0} to the OpenChain Certification website.<br /> <br />To complete your registration, click on the following or copy/paste into your web browser <a href="{1}">{1}</a><br/><br/>Thanks,<br/>The OpenChain team</div>
