Mostly working update directly from conformance questionnaire git repository
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -24,6 +24,7 @@ YesNo.NotAnswered=not answered
 YesNo.YesNotApplicable=yes, but not applicable
 YesNo.NoNotApplicable=no, but not applicable
 # Strings used in the Certification Servlet class.  Most of the messages are errors.  Errors from this class are more common
+CertificationServlet.1=Error accessing the Questionnaire GIT repository.  Please report this error to the OpenChain team.
 CertificationServlet.11=Unexpected SQL exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
 CertificationServlet.13=Unexpected data exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
 CertificationServlet.14=An unexpected error occurred.  Please notify the OpenChain technical group that the following error has occurred: {0}
