--- a/resources/messages.properties
+++ b/resources/messages.properties
@@ -37,6 +37,7 @@ CertificationServlet.22=Error signing up: {0}
 CertificationServlet.24=Can not reset password.  Check that the username and email match the registered user
 CertificationServlet.25=User is not logged in
 CertificationServlet.26=Invalid survey question update: {0}
+CertificationServlet.27=Unexpected error - missing file in Conformance Questionnaire GIT Repository.  Please notify the OpenChain team of this error.
 CertificationServlet.29=Must have admin privileges to upload a survey
 CertificationServlet.30=Invalid survey upload: {0}
 CertificationServlet.32=Must have admin privileges to set submission status
@@ -55,7 +56,9 @@ CertificationServlet.63=Not all questions are present in the update.  Questions 
 CertificationServlet.64=Invalid CSV format.  Number of columns do not match.  Expected {0} columns.
 CertificationServlet.66=Invalid CSV column.  Expected {0}, found {1}
 CertificationServlet.7=Unknown server request: {0}
+CertificationServlet.8=Error updating specification version {0} language {1}.  Update for this file will be skipped.
 CertificationServlet.9=Unexpected survey response exception.  Please notify the OpenChain technical group that the following error has occurred: {0}
+
 # Strings from the UserSession class.  Many strings are error messages.  Some of the error messages are commonly displayed
 UserSession.10=Unexpected Invalid Key exception completing verification.  Please report this error to the OpenChain team
 UserSession.101=Username for password reset does not match the username in the email reset.
@@ -99,6 +102,38 @@ Question.3=Question number for question was not specified
 Question.6=Invalid format for question number {0}.  Must be of the format N or N.N or N.N.N 
 Question.8=Invalid format for question number {0}.  Must be of the format N or N.a or N.a.i
 QuestionJsonDeserializer.10=Unknown question type: {0}
+# Strings from SurveyUpdateResult class
+SurveyUpdateResult.1=Version: {0}; Language: {1} {2}
+SurveyUpdateResult.2=Version: {0}; Language: {1)
 # Test values - used for testing the I18N functionality NOTE: THESE SHOULD NOT BE TRANSLATED
 test.key1=default key1
 test.key2=This is a template test1 with "7"
+# Messages for the QuestionnaireGitRepo class
+QuestionnaireGitRepo.0=Unexpected error getting Questionnair files.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.10=Unable to delete file {0}
+QuestionnaireGitRepo.11=Unable to delete directory {0}
+QuestionnaireGitRepo.12=Unable to check out specific questionnaire version.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.13=Commit reference {0} was not found.
+QuestionnaireGitRepo.15=Tag {0} was not found.
+QuestionnaireGitRepo.17=Unable to check out the master version.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.18=Unable to check out specific questionnaire version.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.19=Unable to check out specific questionnaire version.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.20=Unable to refresh the Questionnaire Git Repository.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.3=Remove not supported for Questionnaire File Iterator
+QuestionnaireGitRepo.33=Unable to obtain tags from the Questionnaire Git Repository.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.34=Unexpected error getting Questionnaire Repository information.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.5=Unexpected error cleaning up the Git directory.  Please contact the OpenChain team with this error.
+QuestionnaireGitRepo.6=I/O error cloning repository
+QuestionnaireGitRepo.7=Unable to access the github repository
+# Messages for the SurveyQuestionUpdateStats class
+# see http://cldr.unicode.org/translation/lists for patterns used in this algorithm
+SurveyQuestionUpdateStats.0=Added {0} questions: 
+SurveyQuestionUpdateStats.3=Added {0} question: 
+SurveyQuestionUpdateStats.1=Updated {0} questions: 
+SurveyQuestionUpdateStats.4=Updated {0} question: 
+SurveyQuestionUpdateStats.2=No Changes.
+SurveyQuestionUpdateStats.1list={0}.  
+SurveyQuestionUpdateStats.2list={0} and {1}.  
+SurveyQuestionUpdateStats.start={0}, {1}
+SurveyQuestionUpdateStats.middle={0}, {1}
+SurveyQuestionUpdateStats.end={0}, and {1}.  
