--- a/WebContent/resources/locales/en/translation.json
+++ b/WebContent/resources/locales/en/translation.json
@@ -125,15 +125,15 @@
   "Admin_title":"OpenChain Self Certification Administration",
   "Site Status":"Site Status",
   "Site Software Version: ":"Site Software Version: ",
-  "Manage Survey Question Content":"Manage Survey Question Content",
+  "Edit Conformance Questions":"Edit Conformance Questions",
   "Git Tag" : "Git Tag",
   "Git Commit" : "Git Commit",
   "Update Survey Questions":"Update Survey Questions",
   "Submission Status":"Submission Status",
-  "Submitted Awaiting Approval":"Submitted Awaiting Approval",
+  "Submitted Awaiting Approval":"Awaiting Approval",
   "Approve Selected":"Approve Selected",
   "Reject Selected":"Reject Selected",
-  "Submitted Rejected":"Submitted Rejected",
+  "Submitted Rejected":"Rejected",
   "UnReject Selected":"UnReject Selected",
   "Approved":"Approved",
   "UnApprove Selected":"UnApprove Selected",
@@ -156,7 +156,7 @@
   "COMMENT_10": "/****************************** TRANSLATIONS FOR THE Online Self-Certification PAGE IS GIVEN BELOW*********(title,Specification Version )***************************/",
 
   "Survey_title":"OpenChain Self Certification Survey",
-  "Survey Version":"(Survey Version",
+  "Survey Version":"Survey Version",
   "Save Answers":"Save Answers",
   "Save and Submit":"Save and Submit",
   "Unsubmit":"Unsubmit",
